feat : fix directory not found error on docker

--- a/Docker/DockerFile
+++ b/Docker/DockerFile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1
-FROM golang:1.21.3 AS base
+FROM golang:alpine AS base
 WORKDIR /src
 COPY go.mod go.sum ./
 RUN --mount=type=cache,target=/go/pkg/mod/ \
@@ -11,15 +11,13 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
     go build -o /bin/client ./cmd/client
 
 FROM base AS build-server
-RUN --mount=type=cache,taget=/go/pkg/mod/ \
+RUN --mount=type=cache,target=/go/pkg/mod/ \
     go build -o /bin/server ./cmd/server
 
 FROM scratch AS client
-RUN mkdir -p /bin/client 
 COPY --from=build-client /bin/client /bin/client
 ENTRYPOINT [ "/bin/client" ]
 
 FROM scratch AS server
-RUN mkdir -p /bin/server
 COPY --from=build-server /bin/server /bin/server
 ENTRYPOINT [ "/bin/server" ]
