--- a/Docker/DockerFile
+++ b/Docker/DockerFile
@@ -1,18 +1,23 @@
 # syntax=docker/dockerfile:1
-FROM golang:alpine AS base
+ARG GO_VERSION=1.21
+FROM golang:${GO_VERSION}-alpine AS base
 WORKDIR /src
 COPY go.mod go.sum ./
 RUN --mount=type=cache,target=/go/pkg/mod/ \
-    go mod download
-COPY . .
+    --mount=type=bind,source=go.sum,target=go.sum \
+    --mount=type=bind,source=go.mod,target=go.mod \
+    go mod download -x
 
 FROM base AS build-client
 RUN --mount=type=cache,target=/go/pkg/mod/ \
+    --mount=type=bind,target=. \
     go build -o /bin/client ./cmd/client
 
 FROM base AS build-server
+ARG APP_VERSION="v0.0.0+unkown"
 RUN --mount=type=cache,target=/go/pkg/mod/ \
-    go build -o /bin/server ./cmd/server
+    --mount=type=bind,target=. \
+    go build -ldflags "-X main.version=$APP_VERSION" -o /bin/server ./cmd/server
 
 FROM scratch AS client
 COPY --from=build-client /bin/client /bin/client
