--- a/Docker/DockerFile
+++ b/Docker/DockerFile
@@ -26,3 +26,7 @@ ENTRYPOINT [ "/bin/client" ]
 FROM scratch AS server
 COPY --from=build-server /bin/server /bin/server
 ENTRYPOINT [ "/bin/server" ]
+
+FROM scratch AS binaries
+COPY --from=build-server /bin/server /
+COPY --from=build-client /bin/client /
